@@ -153,6 +153,9 @@ Release 0.21.0 - 2010-07-01
 
   IMPROVEMENTS
 
+    HDFS-1277. [Herriot] New property for multi user list. (Vinay Thota via
+    cos)
+
     HDFS-1174. New properties for suspend and resume process. (Vinay Thota via
     cos)
 
